--- a/web/index.html
+++ b/web/index.html
@@ -12,7 +12,7 @@
   <meta content="Josiah's silly website :>" property="og:title" />
   <meta content="blehh!!!!!" property="og:description" />
   <meta name="twitter:card" content="summary_large_image">
-  <meta content="josia.png" property="og:image" />
+  <meta content="/josia.png" property="og:image" />
   <meta content="#FF0000" data-react-helmet="true" name="theme-color" />
 </head>
 <body>
