--- a/web/index.html
+++ b/web/index.html
@@ -44,8 +44,10 @@
   <div id="info">
     <h1>Hey guys! Josiah here!</h1>
     <p id="userAgent">unknown user agent...</p>
-    <p>This is my personal website so I just want to let you know that anybody who is trying to put a domain on their slap damn thing it's NOT ME.</p>
+    <p>This is my personal website so I just want to let you know that anybody who is trying to put this domain wherever it's NOT ME.</p>
     <br>
+    <h1>Donate</h1>
+    <script type='text/javascript' src='https://storage.ko-fi.com/cdn/widget/Widget_2.js'></script><script type='text/javascript'>kofiwidget2.init('Donate Casually!', '#29abe0', 'V7V7KUKCN');kofiwidget2.draw();</script> 
     <h1>Links</h1>
     <ul>
       <li><a href="rvc">RVC Models</a></li>
