--- a/web/index.html
+++ b/web/index.html
@@ -15,6 +15,7 @@
 </head>
 <body>
 	<div class="content">
+		<h1>A NEW WEBSITE IS BEING CREATED! <a href="https://ssv70s6w.asse.devtunnels.ms:5000/">Click here to see it as a dev tunnel and get updated, from my PC to yours!</a></h1>
 		<div class="profilecard">
 			<div class="me">
 				<div class="avatar">
